--- a/Week-5/Class-9/index.html
+++ b/Week-5/Class-9/index.html
@@ -12,5 +12,11 @@
 		<script src="libaries/HozBarChart.js" type="text/javascript"></script>
 		<script src="libaries/StackedChart.js" type="text/javascript"></script>
 		<script src="sketch.js" type="text/javascript"></script>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap"
+			rel="stylesheet"
+		/>
 	</body>
 </html>
