--- a/Week-5/Class-9/index.html
+++ b/Week-5/Class-9/index.html
@@ -11,6 +11,7 @@
 		<script src="libaries/BarChart.js" type="text/javascript"></script>
 		<script src="libaries/HozBarChart.js" type="text/javascript"></script>
 		<script src="libaries/StackedChart.js" type="text/javascript"></script>
+		<script src="libaries/SideStackedChart.js" type="text/javascript"></script>
 		<script src="sketch.js" type="text/javascript"></script>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,5 +19,12 @@
 			href="https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap"
 			rel="stylesheet"
 		/>
-	</body>
-</html>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet"></html>
